🐛 Bug(home): fix minor spacing issues

--- a/src/app/bounties/components/BountyCard.module.scss
+++ b/src/app/bounties/components/BountyCard.module.scss
@@ -42,8 +42,9 @@
   font-size: rem(17);
   color: #181826;
   font-weight: 500;
-  line-height: 130%;
+  line-height: rem(13);
   min-width: rem(120);
+  letter-spacing: rem(1);
 }
 
 .bountyMobile {
